--- a/index.html
+++ b/index.html
@@ -219,14 +219,12 @@
         <!-- ======= My Projects Section ======= -->
         <section id="projects" class="projects">
           <div class="container">
-    
             <div class="section-title">
               <span>My Projects</span>
               <h2>My Projects</h2>
             </div>
             <div class="row portfolio-container">
               <div class="col-lg-4 col-md-6 portfolio-item">
-                <!-- <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div> -->
                 <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
@@ -263,8 +261,7 @@
                   <p class= "indent-line">Ill formed malicious URL detection using ML<a href="https://github.com/Dene2002/Malicious-URL-detector-using-Machine-learning-model" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-            </div>
-              <div class="col-lg-4 col-md-6 portfolio-item">
+              <div class="col-lg-8 col-md-10 portfolio-item">
                 <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
@@ -279,7 +276,7 @@
                   <p>Housing Rentals Recommendation System<a href="https://github.com/Dene2002/Recommendation-system-of-Housing-properties" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 portfolio-item">
+              <div class="col-lg-8 col-md-12 portfolio-item" style="position: absolute; left:438px; top:440px;">
                 <div class="image-container move-right">
                   <div class="card">
                       <div class="side image-side">
@@ -301,10 +298,10 @@
                   <p class= "indent-line">Financial data stock price forecasting using ML<a href="https://github.com/Avineesh28/Exploratory-Data-Analysis-of-Bank-Historical-Stock-Data" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-              </div>
             </div>
           </div>
-        </section><!-- End My Projects Section -->    
+        </section>
+        <!-- End My Projects Section -->    
 
     <!-- ======= My Acheivements Section ======= -->
     <section id="acheivements" class="acheivements">
