--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <h2>My Projects</h2>
             </div>
             <div class="row portfolio-container">
-              <div class="col-lg-4 col-md-6 portfolio-item">
+              <div class="col-lg-17">
                 <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
@@ -239,8 +239,8 @@
                   <p>Advanced Cryptanalysis of LFSR <a href="https://github.com/Dene2002/Multiplexed-LFSR-" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 portfolio-item">
-                <div class="image-container move-right">
+              <div class="col-lg-18">
+                <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
                           <img src="assets/img/portfolio/portfolio-2.jpg" alt="Image" style="width: 100%; height: 100%;">
@@ -251,17 +251,17 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <style>
+                  <!-- <style>
                     .indent-line {
                         padding-left: 250px; 
                         text-align: right;
                         width: 600px;
                     }
-                  </style>
+                  </style> -->
                   <p class= "indent-line">Ill formed malicious URL detection using ML<a href="https://github.com/Dene2002/Malicious-URL-detector-using-Machine-learning-model" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-              <div class="col-lg-8 col-md-10 portfolio-item">
+              <div class="col-lg-19">
                 <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
@@ -276,8 +276,8 @@
                   <p>Housing Rentals Recommendation System<a href="https://github.com/Dene2002/Recommendation-system-of-Housing-properties" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
-              <div class="col-lg-8 col-md-12 portfolio-item" style="position: absolute; left:438px; top:440px;">
-                <div class="image-container move-right">
+              <div class="col-lg-20">
+                <div class="image-container">
                   <div class="card">
                       <div class="side image-side">
                           <img src="assets/img/portfolio/portfolio-4.jpg" alt="Image" style="width: 100%; height: 100%; ">
@@ -288,13 +288,13 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <style>
+                  <!-- <style>
                     .indent-line {
                         padding-left: 200px; 
                         text-align: right;
                         width: 600px;
                     }
-                  </style>
+                  </style> -->
                   <p class= "indent-line">Financial data stock price forecasting using ML<a href="https://github.com/Avineesh28/Exploratory-Data-Analysis-of-Bank-Historical-Stock-Data" class="details-link" title="More Details"><i class="bx bx-link"></i></a> </p>
                 </div>
               </div>
