--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Avineesh SathyaKumar</h3>
-                <h4>Upcoming Software Development Analyst at Citi India</h4>
+                <h4>Upcoming Software Development Analyst, Citi</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Has extensive and deep knowledge of cyber security as well as supervised learning algorithms based off elaborate trial and error sessions resulting inher expertise. She is great to work with in a team and doesnt shy away from taking responsibilty/charge in situations.
@@ -377,6 +377,30 @@ I particularly admired Denebola Biswas's capability to methodically analyze and 
                 </p>
               </div>
             </div><!-- End testimonial item -->
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <h3>Dr. R. Rakesh </h3>
+                <h4>Assistant Professor, Amrita Vishwa Vidyapeetham</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  I have taught Ms. Denebola from her 1st year of University and I can vouch for her penchant to grasp concepts and apply the knowledge back. This was evident when she approached me during her projects where she wanted to inculcate python along security domain. She is very sincere, hardworking and relentless.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                <h3>Sri. Krishna Balagopalan</h3>
+                <h4>Technology Analayst, Citi</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Denebola joined my team as an intern at Citi. Working with her, she showed the ability to understand what was required from her and learn whatever was required to deliver impact, including concepts a full time software developer is expected to know. She never shied away from learning by reading up or googling her way out of issues, and asked for help only after her full effort was put in. Overall a great person to work with!
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
