--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ I particularly admired Denebola Biswas's capability to methodically analyze and 
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/laura-free-creative-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <p>Designed by denebolabiswas</p>
       </div>
     </div>
   </footer><!-- End Footer -->
